--- a/Java/Coolgoole/bin/coolgle/mainGui.form
+++ b/Java/Coolgoole/bin/coolgle/mainGui.form
@@ -278,14 +278,12 @@
           <Font name="Times New Roman" size="14" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="New Search"/>
-            <StringItem index="1" value="Previous Search 1"/>
-            <StringItem index="2" value="Previous Search 2"/>
-            <StringItem index="3" value="ect..."/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectPrevTrip"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="helpBtn">
       <Properties>
