--- a/Java/Coolgoole/bin/coolgle/mainGui.form
+++ b/Java/Coolgoole/bin/coolgle/mainGui.form
@@ -282,6 +282,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="changeTrip"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="selectPrevTrip"/>
       </Events>
     </Component>
